# wyah

./: .gitignore  Makefile  README.md  stack.yaml  wyah.cabal
app/: Main.hs
data/: test1.lc
data/ch7/: test1.ml
notes/: lambda.md  let.md
src/: Wyah.hs
src/Sandbox/: Prettyprint1.hs
src/Wyah/: Chapter4.hs  Chapter5.hs  Untyped.hs
src/Wyah/Chapter4/: Eval.hs  Pretty.hs  Syntax.hs
src/Wyah/Chapter5/: Check.hs  Eval.hs  Lexer.x  Parser.y  Syntax.hs  Type.hs
src/Wyah/Chapter5/Calc/: Check.hs  Eval.hs  Lexer.x  Parser.y  Pretty.hs  REPL.hs  Syntax.hs  Type.hs
src/Wyah/Chapter5/STLC/: Check.hs  Env.hs  Eval.hs  Lexer.x  Parser.y  Pretty.hs  REPL.hs  Syntax.hs  Types.hs
src/Wyah/Chapter5/STLC/Pretty/: Style.hs  \
src/Wyah/Chapter6/: HOAS.hs  IO.hs  Lazy.hs  PHOAS.hs
src/Wyah/Chapter7/: Ctx.hs  Env.hs  Eval.hs  Infer.hs  Lexer.x  Parser.y  Pretty.hs  REPL.hs  Syntax.hs  Type.hs  TypeEnv.hs
src/Wyah/Chapter7/Infer/: Name.hs  README.md  Subst.hs  Types.hs
src/Wyah/Chapter7/Pretty/: Style.hs  Utils.hs
src/Wyah/Chapter8/: Env.hs  Error.hs  Flags.hs  Frontend.hs  Monad.hs  Name.hs  Type.hs
src/Wyah/Chapter8/Error/: SrcPos.hs
src/Wyah/Untyped/: Eval.hs  Pretty.hs  Syntax.hs
test/Wyah/: Support.hs
test/Wyah/Chapter7/: EvalTest.hs  InferTest.hs  ParserTest.hs  PrettyTest.hs
test/Wyah/Chapter7/tests/eval/expr/: arith2.lc  arith3.lc  bool2.lc
test/Wyah/Chapter7/tests/infer/decl/: I.lc.golden  I.lc.syn  K.lc.golden  K.lc.syn  Mu.lc.golden  Mu.lc.syn  S.lc.golden  S.lc.syn  ap.lc.syn  arith1.lc.golden  arith1.lc.syn  arith2.lc.golden  arith2.lc.syn  arith3.lc.golden  arith3.lc.syn  compose.lc.syn  fact.lc.syn  false.lc.syn  fib.lc.syn  fixf.lc.golden  fixf.lc.syn  innerlet.lc.syn  innerletrec.lc.golden  mult.lc.golden  mult.lc.syn  on.lc.golden  on.lc.syn  one.lc.golden  one.lc.syn  plus.lc.golden  plus.lc.syn  pow.lc.golden  pow.lc.syn  true.lc.syn  twice.lc.golden  twice.lc.syn  until.lc.golden  until.lc.syn  zero.lc.syn
test/Wyah/Chapter7/tests/parser/: app1.golden  app1.lc  app2.golden  app2.lc  arith1.golden  arith1.lc  arith2.golden  arith2.lc  arith3.golden  arith3.lc  arith4.golden  arith4.lc  arith5.golden  arith5.lc  bool1.golden  bool1.lc  bool2.golden  bool2.lc  bool3.golden  bool3.lc  comb1.golden  comb1.lc  cond1.golden  cond1.lc  cond2.golden  cond2.lc  conv1.golden  conv1.lc  fact1.golden  fact1.lc  fib1.golden  fib1.lc  fixf1.golden  fixf1.lc  fresh1.golden  fresh1.lc  fun1.golden  fun1.lc  fun2.golden  fun2.lc  (+33 more)
test/Wyah/Chapter7/tests/pretty/decl/: app1.lc.syn  app2.lc.syn  arith1.lc.golden  arith1.lc.syn  arith2.lc.golden  arith2.lc.syn  arith3.lc.golden  arith3.lc.syn  comb1.lc.golden  comb1.lc.syn  cond1.lc.golden  cond1.lc.syn  conv1.lc.golden  conv1.lc.syn  fun1.lc.golden  fun1.lc.syn  lists1.lc.golden  lists1.lc.syn
test/Wyah/Chapter7/tests/pretty/expr/: app1.lc.golden  app1.lc.syn  app2.lc.golden  app2.lc.syn  app3.lc.golden  app3.lc.syn  arith1.lc.golden  arith1.lc.syn  bool1.lc.golden  bool1.lc.syn  bool2.lc.golden  bool2.lc.syn  cond1.lc.golden  cond1.lc.syn  fixf1.lc.golden  fixf1.lc.syn  innerlet1.lc.golden  innerlet1.lc.syn  lam_app1.lc.golden  lam_app1.lc.syn  lam_app2.lc.golden  lam_app2.lc.syn  self1.lc.golden  self1.lc.syn
test/Wyah/Chapter7/tests/pretty/program/: app1.lc.golden  app1.lc.syn  app2.lc.golden  app2.lc.syn  arith1.lc.golden  arith1.lc.syn  arith2.lc.golden  arith2.lc.syn  arith3.lc.golden  arith3.lc.syn  arith4.lc.golden  arith4.lc.syn  artih5.lc.golden  artih5.lc.syn  comb1.lc.golden  comb1.lc.syn  cond1.lc.syn  cond2.lc.golden  cond2.lc.syn  conv1.lc.golden  conv1.lc.syn  fact1.lc.golden  fact1.lc.syn  fib1.lc.golden  fib1.lc.syn  fun1.lc.golden  fun1.lc.syn  fun2.lc.golden  fun2.lc.syn  lists1.lc.golden  lists1.lc.syn  logic1.lc.golden  logic1.lc.syn  logic2.lc.golden  logic2.lc.syn  multi1.lc.golden  multi1.lc.syn  multi2.lc.golden  multi2.lc.syn  ski1.lc.golden  (+3 more)
test/Wyah/Chapter7/tests/pretty/type/: I.lc.typ  K.lc.golden  K.lc.typ  S.lc.golden  S.lc.typ  ap.lc.typ  arith.lc.golden  arith.lc.typ  compose.lc.typ  fixf.lc.golden  fixf.lc.typ  innerlet.lc.golden  innerlet.lc.typ  mutl.lc.golden  plus.lc.golden  plus.lc.typ  twice.lc.golden  until.lc.golden  until.lc.typ
